[package]
name = "nixpkgs-failed"
version = "0.1.2"
edition = "2021"

[profile.release]
lto = true
strip = true

[dependencies]
reqwest = {version = "=0.12.8", default-features = false, features = ["blocking", "json", "rustls-tls" ]}
serde = {version = "=1.0.210", features = [ "derive" ]}
rand = "=0.8.5"
